5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1636_87.log
== TEST (2019-04-05 15:03:04) 
-- CODE:
# Entradas
primeiro = int(input("Primeiro: ")
segundo = int(input("Segundo: ")
terceiro = int(input("Terceiro: ")
menor = primeiro
if (segundo < menor):
	segundo = menor
if (terceiro < menor)
	terceiro = menor
print(menor)
					
					
					



-- ERROR:
File "XXXX", line 3
    segundo = int(input()
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 15:04:23) 
-- CODE:
# Entradas
I = int(input("Primeiro: ")
II = int(input("Segundo: ")
III = int(input("Terceiro: ")
menor = I
if (II < menor):
	II = menor
if (III < menor)
	III = menor
print(menor)
					
					
					



-- ERROR:
File "XXXX", line 3
    II = int(input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:36:39) 
-- CODE:
# Entradas
n1 = float(input("N1: "))
n2 = float(input("N2: "))
n3 = float(input("N3: "))
if (n1 < n2 and n1 < n3):
	menor = n1
if (n2 < n1 and n2 < n3):
	menor = n2
if (n3 < n1 and n3 < n2):
	menor = n3
print(menor)
					



-- OUTPUT:
35.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 22:37:01) 
-- CODE:
# Entradas
n1 = float(input("N1: "))
n2 = float(input("N2: "))
n3 = float(input("N3: "))
if (n1 < n2 and n1 < n3):
	menor = n1
if (n2 < n1 and n2 < n3):
	menor = n2
if (n3 < n1 and n3 < n2):
	menor = n3
print(menor)
					



-- OUTPUT:
35.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 22:37:19) 
-- CODE:
# Entradas
n1 = float(input("N1: "))
n2 = float(input("N2: "))
n3 = float(input("N3: "))
if (n1 < n2 and n1 < n3):
	menor = n1
if (n2 < n1 and n2 < n3):
	menor = n2
if (n3 < n1 and n3 < n2):
	menor = n3
print(menor)
					



-- EXECUTION TIME:
0.121315
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
35.0
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
55.0
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 22:54:03) 
-- CODE:
# Entradas
n1 = int(input("N1: "))
n2 = int(input("N2: "))
n3 = int(input("N3: "))
# Condicoes
if (n1 < n2 and n1 < n3):
	menor = n1
if (n2 < n1 and n2 < n3):
	menor = n2
if (n3 < n1 and n3 < n2):
	menor = n3
# Saida
print(menor)
					



-- EXECUTION TIME:
0.136966
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
